# strym-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  dependencies.py  main.py  middleware.py
app/core/: exceptions.py  security.py
app/db/: connection.py
app/db/migrations/: 001_initial_schema.sql
app/models/: common.py  log.py  stats.py
app/repositories/: log_repository.py  stats_repository.py
app/routers/: health.py  ingestion.py  query.py  stats.py  stream.py
app/services/: cache_service.py  log_service.py  stats_service.py  stream_service.py
